<resources>
    <string name="app_name">Pullgo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_id">Id</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_check">Password Check</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_student_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="sign_up">회원가입</string>
    <string name="menu_change_info">회원정보 변경</string>
    <string name="underlined_apply_other_academy_or_create"><u>학원 가입/생성</u></string>
    <string name="underlined_apply_other_academy"><u>다른학원 가입</u></string>
    <string name="login">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="underlined_logout"><u>로그아웃</u></string>
    <string name="welcome_comment">풀고에 오신 것을 \n 환영합니다!</string>

    <string name="underlined_create_classroom"><u>반 생성</u></string>
    <string name="underlined_accept_apply_academy"><u>승인</u></string>
    <string name="underlined_manage_classroom_kick_student"><u>반에서 제외</u></string>
    <string name="underlined_edit"><u>수정하기</u></string>
    <string name="underlined_edit_success"><u>수정완료</u></string>
    <string name="underlined_delete"><u>삭제하기</u></string>
    <string name="underlined_delegate"><u>권한 위임</u></string>
    <string name="underlined_delete_academy"><u>학원 삭제</u></string>
    <string name="underlined_cancel"><u>취소</u></string>
    <string name="underlined_kick_people"><u>제외하기</u></string>
    <string name="underlined_make_academy"><u>학원 생성</u></string>

    <string name="comment_sign_up_success">회원가입에 성공하였습니다! \n가입하신 아이디로 로그인 해주세요</string>
    <string name="comment_find_id_success">입력하신 번호로 아이디가 전송되었습니다.</string>
    <string name="comment_find_pw_success">임시 비밀번호가 전송되었습니다\n로그인 후 비밀번호를 변경해 주세요</string>
    <string name="comment_no_people">소속된 인원이 없습니다</string>
    <string name="comment_select_date">날짜를 선택하세요</string>
    <string name="comment_select_begin_date">시작 날짜를 선택하세요</string>
    <string name="comment_select_end_date">종료 날짜를 선택하세요</string>
    <string name="comment_input_password_for_edit_person_info">정보 수정을 위해 비밀번호를 입력해 주세요</string>
    <string name="comment_input_password">비밀번호를 입력해주세요</string>
    <string name="comment_select_begin_time">시작 시간을 선택하세요</string>
    <string name="comment_select_end_time">종료 시간을 선택하세요</string>
    <string name="comment_input_lesson_name">수업 이름을 입력하세요</string>
    <string name="comment_no_applied_classroom">가입된 반이 없습니다!</string>
    <string name="comment_no_applied_students_in_classroom">반에 속한 학생이 없습니다</string>
    <string name="comment_no_applied_teachers_in_classroom">반에 속한 선생님이 없습니다</string>
    <string name="comment_input_id">아이디를 입력해주세요</string>
    <string name="comment_re_input_password">비밀번호를 다시 입력해주세요</string>
    <string name="comment_input_person_info">원활한 이용을 위해 정확한 정보를 입력해주세요</string>
    <string name="comment_input_name">이름을 입력해주세요</string>
    <string name="comment_input_phone">전화번호를 입력해주세요 (- 제외)</string>
    <string name="comment_input_parent_phone">부모님 전화번호를 입력해주세요 (- 제외)</string>
    <string name="comment_input_username">아이디를 입력해주세요</string>
    <string name="comment_input_verification_num">인증번호를 입력해주세요</string>
    <string name="comment_input_school">학교를 입력해주세요</string>
    <string name="comment_change_person_info">회원정보를 수정할 수 있습니다</string>
    <string name="comment_select_academy">학원을 선택하세요</string>
    <string name="comment_select_teacher">선생님을 선택하세요</string>
    <string name="comment_input_classroom_name">반 이름을 입력하세요</string>
    <string name="comment_input_exam_name">시험 이름을 입력하세요</string>
    <string name="comment_input_exam_time_limit">제한 시간을 입력하세요(분)</string>
    <string name="comment_input_exam_pass_score">기준 점수를 입력하세요</string>
    <string name="comment_no_exam">시험이 존재하지 않습니다</string>
    <string name="comment_no_exam_history">응시 완료한 시험이 없습니다</string>
    <string name="comment_no_applied_academy">가입된 학원이 없습니다</string>
    <string name="comment_no_question">등록된 문제가 없습니다</string>
    <string name="comment_please_add_question">+ 버튼을 클릭해 문제를 등록해 주세요</string>

    <string name="create_academy">학원 개설</string>
    <string name="academy_name">학원 이름</string>
    <string name="academy_address">학원 주소</string>
    <string name="detailed_address">상세 주소</string>
    <string name="select_academy">학원 선택</string>
    <string name="selected_academy">선택한 학원</string>
    <string name="manage_people">구성원 관리</string>
    <string name="student">학생</string>
    <string name="teacher">선생님</string>
    <string name="underlined_confirm"><u>확인</u></string>
    <string name="selected_teacher">선택한 선생님</string>
    <string name="search_by_teacher_or_classroom_name">선생님 이름 또는 반 이름</string>
    <string name="no_applied_academy">가입된 학원이 없습니다</string>
    <string name="no_search_classroom_result">검색된 반이 존재하지 않습니다!</string>
    <string name="remove_from_academy">학원에서 제외</string>
    <string name="go_to_login">로그인 화면으로</string>
    <string name="lesson_info">수업 정보</string>

    <string name="classroom">반</string>
    <string name="selected_classroom">선택된 반</string>
    <string name="create_classroom">반 생성</string>
    <string name="classroom_name">반 이름</string>

    <string name="lesson_name">수업 이름</string>
    <string name="lesson_date">수업 날짜</string>
    <string name="lesson_time">수업 시간</string>
    <string name="date">날짜</string>
    <string name="begin_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="edit">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="manage_lesson">수업 관리</string>
    <string name="student_request">학생 요청</string>
    <string name="teacher_request">선생님 요청</string>

    <string name="exam_name">시험 이름</string>
    <string name="exam_time_limit">제한 시간</string>
    <string name="exam_pass_score">기준 점수</string>
    <string name="create_exam">시험 생성</string>
    <string name="modify">수정하기</string>
    <string name="modify_complete">수정완료</string>
    <string name="exam_begin_date">시작 날짜</string>
    <string name="exam_end_date">종료 날짜</string>
    <string name="create_question">문제 생성</string>

    <string name="full_name">이름</string>
    <string name="user_name">아이디</string>
    <string name="password">비밀번호</string>
    <string name="phone">전화번호</string>
    <string name="find_username">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_username_and_password">아이디/비밀번호 찾기</string>
    <string name="sign_up_student">학생으로 회원가입</string>
    <string name="sign_up_teacher">선생님으로 회원가입</string>
    <string name="sign_up_success">회원가입 완료</string>
    <string name="change_person_info">회원정보 수정</string>
    <string name="confirm">확인</string>
    <string name="student_info">학생 정보</string>
    <string name="student_name">학생 이름</string>
    <string name="student_id">학생 ID</string>
    <string name="school">학교</string>
    <string name="grade">학년</string>
    <string name="parent_phone">보호자 연락처</string>
    <string name="teacher_info">선생님 정보</string>
    <string name="teacher_name">선생님 이름</string>
    <string name="teacher_id">선생님 ID</string>
    <string name="academy_info">학원 정보</string>
    <string name="academy_owner">학원장</string>
    <string name="classroom_info">반 정보</string>
    <string name="classroom_creator">반 담임</string>
    <string name="classroom_academy">소속 학원</string>
    <string name="academy_request">학원 요청</string>
    <string name="classroom_request">반 요청</string>

    <string name="select_date">날짜 선택</string>
    <string name="delegate_author">권한 위임</string>
    <string name="delegate_hint">선택한 선생님에게 권한을 위임합니다</string>
    <string name="send_id">아이디 전송</string>
    <string name="send_password">비밀번호 전송</string>
    <string name="current_academy">현재 학원</string>
    <string name="no_apply_request">가입 요청이 없습니다</string>
    <string name="num_of_lessons">강의 개수</string>
    <string name="edit_person_info">회원정보 수정</string>
    <string name="select_classroom">반 선택</string>
    <string name="time">시간</string>
    <string name="create_lesson">수업 생성</string>
    <string name="cancel">취소</string>
    <string name="input_id">아이디 입력</string>
    <string name="check_overlap">중복 확인</string>
    <string name="go_next">다음으로</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="input_person_info">개인정보 입력</string>
    <string name="request_verification">인증 요청</string>
    <string name="check_verification_num">인증번호 확인</string>
    <string name="edit_success">수정 완료</string>
    <string name="apply">가입하기</string>
    <string name="create">생성하기</string>
    <string name="change_info">정보 수정</string>
    <string name="name">이름</string>
    <string name="attender_state">응시 현황</string>
    <string name="finish_exam">시험 종료</string>
    <string name="cancel_exam">시험 취소</string>
    <string name="manage_question">문제 관리</string>
    <string name="exam_begin_time">시작 시간</string>
    <string name="exam_end_time">종료 시간</string>
    <string name="exam_result">시험 결과</string>
    <string name="take_exam">시험 응시</string>
    <string name="do_take_exam">응시하기</string>
    <string name="taken_exam">응시한 시험</string>
    <string name="show_history">확인하기</string>
    <string name="sort_exam_by_name">이름 순</string>
    <string name="sort_exam_by_begin_date">시작날짜 순</string>
    <string name="sort_exam_by_end_date">종료날짜 순</string>

    <string name="classroomTeacherNameFormat" formatted="false">%s 선생님</string>
    <string name="examPassScoreFormat" formatted="false">기준: %d점</string>
    <string name="studentGradeFormat" formatted="false">%d학년</string>
    <string name="personIdParenthesis" formatted="false">(%s)</string>

    <string name="manage_exam">시험 관리</string>
    <string name="end_exam">시험 종료</string>
    <string name="delete_question">문제 삭제</string>
    <string name="add_question">문제 추가</string>
    <string name="input_question">문제 입력</string>
    <string name="manage_choice">보기 관리</string>
    <string name="add_choice">보기 추가</string>
    <string name="comment_click_under_image_for_register">아래 이미지를 클릭하여 등록 / 수정할 수 있습니다</string>

    <string name="comment_finish_exam">시험을 종료합니다</string>
    <string name="comment_finish_exam_detail">선택한 시험을 종료하며 응시정보가 저장됩니다.</string>
    <string name="comment_cancel_exam">시험을 취소합니다</string>
    <string name="comment_cancel_exam_detail">선택한 시험을 취소합니다.</string>
    <string name="comment_no_students_took_exam">시험에 응시하는 학생이 존재하지 않습니다</string>
    <string name="comment_exam_result_check">자세한 결과는 오답노트에서 확인하실 수 있습니다</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_manage_people">ManagePeopleActivity</string>
    <string name="title_activity_manage_classroom_details">ManageClassroomDetailsActivity</string>
    <string name="title_activity_manage_question">ManageQuestionActivity</string>
    <string name="title_activity_take_exam">TakeExamActivity</string>
    <string name="title_activity_exam_history">ExamHistoryActivity</string>
</resources>