<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_academy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20sp"/>

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerAcceptApplyAcademy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:smsp_searchTextColor="@color/secondary_color"
            app:smsp_hint="@string/comment_select_academy"
            app:smsp_floatingLabelText="@string/selected_academy"
            app:smsp_floatingLabelColor="@color/white"
            app:smsp_hintSize="16sp"/>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutAcceptApplyAcademy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameLayoutAcceptApplyAcademy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAcceptApplyAcademy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textViewAcceptApplyAcademyNoAcademy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/no_applied_academy"
            android:visibility="gone"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <TextView
            android:id="@+id/textViewAcceptApplyAcademyNoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/no_apply_request"
            android:visibility="gone"
            android:layout_gravity="center_vertical|center_horizontal"/>
    </FrameLayout>
</LinearLayout>