<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCancelExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_cancel_exam"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewCancelComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_cancel_exam_detail"
        android:layout_marginTop="30dp"
        android:textColor="@color/material_700_red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCancelExam" />

    <Button
        android:id="@+id/buttonCancelExam"
        android:layout_width="@dimen/manage_exam_dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:text="@string/cancel_exam"
        android:textColor="@color/white"
        android:textSize="@dimen/success_button_text"
        app:backgroundTint="@color/material_700_red"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCancelComment" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFinishExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_finish_exam"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textViewFinishComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_finish_exam_detail"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFinishExam" />

    <Button
        android:id="@+id/buttonFinishExam"
        android:layout_width="@dimen/manage_exam_dialog_button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/finish_exam"
        android:textColor="@color/white"
        android:textSize="@dimen/success_button_text"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFinishComment" />
</androidx.constraintlayout.widget.ConstraintLayout>