<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTeacherChangeInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:padding="60dp"
        android:text="@string/edit_person_info"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/comment_change_person_info"
        android:textColor="@color/info_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTeacherChangeInfo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeTeacherNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/studentChangeInfoGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeacherChangeInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeTeacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comment_input_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeTeacherPhoneLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/studentChangeInfoGuideline"
        app:layout_constraintTop_toBottomOf="@+id/changeTeacherNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeTeacherPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comment_input_phone"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonChangeTeacherPhoneVerifyRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/request_verification"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/changeTeacherPhoneLayout"
        app:layout_constraintTop_toBottomOf="@+id/changeTeacherNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeTeacherPhoneVerifyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/studentChangeInfoGuideline"
        app:layout_constraintTop_toBottomOf="@+id/changeTeacherPhoneLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeTeacherPhoneVerifyNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comment_input_verification_num"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonTeacherChangePhoneVerifyCheck"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/check_verification_num"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/changeTeacherPhoneVerifyLayout"
        app:layout_constraintTop_toBottomOf="@+id/changeTeacherPhoneLayout" />

    <Button
        android:id="@+id/buttonTeacherChangeSuccess"
        android:layout_width="@dimen/success_button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_main_color"
        android:text="@string/edit_success"
        android:textColor="@color/white"
        android:textSize="@dimen/success_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/studentChangeInfoGuideline"
        app:layout_constraintTop_toBottomOf="@+id/changeTeacherPhoneVerifyLayout"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/studentChangeInfoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />
</androidx.constraintlayout.widget.ConstraintLayout>